fix profile text align

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body { font-family: "PT Sans", Helvetica, Arial, sans-serif; font-size: 16px; li
 /* Set Margin Bottom for Vertical Rhythm ============================================== */
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure { margin-bottom: 15px; }
 
+
 /* Images and Figures ============================================== */
 img { max-width: 100%; vertical-align: middle; }
 
@@ -95,6 +96,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* Individual Posts ============================================== */
 .page-content { padding: 30px 0; text-align: center; }
+.page-content1 { padding: 30px 0; text-align: justify;}
 
 .page-heading { font-size: 20px; padding-top: 2px; }
 
@@ -113,7 +115,11 @@ table { border-collapse: collapse; border-spacing: 0; }
 .post-title { font-size: 42px; letter-spacing: -1px; line-height: 1; }
 @media screen and (max-width: 700px) { .post-title { font-size: 36px; } }
 
-.post-content { margin-bottom: 30px; padding-left:500px; padding-right:500px;     /* h2 { font-size: 32px;
+.post-content { margin-bottom: 30px; padding-left:500px; padding-right:500px; }
+
+
+ /* h2 { font-size: 32px;
+
  @include media-query($on-laptop) { font-size: 28px; } }
  h3 { font-size: 26px;
  @include media-query($on-laptop) { font-size: 22px; } }
